--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -85,33 +85,151 @@
                                     <td th:text="${user.getEmail()}"/>
                                     <td th:text="${user.getRolesToString()}"/>
                                     <td>
-                                        <button type="button" data-bs-toggle="modal" data-bs-target="#myModal">Launch
-                                            modal
+                                        <button type="button" class="btn btn-secondary" th:attrappend="data-bs-target=${user.getId()}"
+                                                data-bs-toggle="modal" data-bs-target="#edit">
+                                            Edit
                                         </button>
                                     </td>
                                     <td>
-                                        <button type="button" class="btn btn-danger" data-toggle="modal"
-                                                data-target="#deleteModal">
+                                        <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                                data-bs-target="#delete">
                                             Delete
                                         </button>
                                     </td>
 
-                                    <div class="modal" id="#myModal" tabindex="-1">
+                                    <div class="modal fade" th:attrappend="id=${user.getId()}" id="edit" tabindex="-1"
+                                         aria-labelledby="exampleModalLabel" aria-hidden="true">
                                         <div class="modal-dialog">
                                             <div class="modal-content">
                                                 <div class="modal-header">
-                                                    <h5 class="modal-title">Modal title</h5>
+                                                    <h1 class="modal-title fs-5">Edit user</h1>
                                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                             aria-label="Close"></button>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <p>Modal body text goes here.</p>
+                                                    <div class="row bg-white justify-content-center">
+                                                        <div class="col-3 p-2">
+                                                            <form class="text-center"
+                                                                  th:action="@{/admin/edit/{id} (id=${user.getId()})}"
+                                                                  th:object="${user}" method="POST">
+                                                                <div class="mb-3">
+                                                                    <label class="form-label"><strong>
+                                                                        ID </strong></label>
+                                                                    <input
+                                                                            type="hidden"
+                                                                            th:name="id"
+                                                                            class="form-control"
+                                                                            th:field="*{id}"
+                                                                    />
+                                                                </div>
+
+                                                                <div class="mb-3">
+                                                                    <label class="form-label"><strong>
+                                                                        First Name </strong></label>
+                                                                    <input
+                                                                            type="text"
+                                                                            th:name="firstName"
+                                                                            class="form-control"
+                                                                            th:field="*{firstName}"
+                                                                            placeholder="Enter First Name"
+                                                                    />
+                                                                </div>
+
+                                                                <div class="mb-3">
+                                                                    <label class="form-label"><strong>
+                                                                        Last Name </strong></label>
+                                                                    <input
+                                                                            type="text"
+                                                                            th:name="lastName"
+                                                                            class="form-control"
+                                                                            th:field="*{lastName}"
+                                                                            placeholder="Enter Last Name"
+                                                                    />
+                                                                </div>
+
+                                                                <div class="mb-3">
+                                                                    <label class="form-label"><strong>
+                                                                        Age </strong></label>
+                                                                    <input
+                                                                            type="number"
+                                                                            th:name="age"
+                                                                            class="form-control"
+                                                                            th:field="*{age}"
+                                                                            placeholder="Enter Age"
+                                                                    />
+                                                                </div>
+
+                                                                <div class="mb-3">
+                                                                    <label class="form-label"><strong>
+                                                                        Email </strong></label>
+                                                                    <input
+                                                                            type="email"
+                                                                            th:name="email"
+                                                                            class="form-control"
+                                                                            th:field="*{email}"
+                                                                            placeholder="Enter Email"
+                                                                    />
+                                                                </div>
+
+                                                                <div class="mb-3">
+                                                                    <label class="form-label"><strong>
+                                                                        Password </strong></label>
+                                                                    <input
+                                                                            type="text"
+                                                                            th:name="password"
+                                                                            class="form-control"
+                                                                            th:field="*{password}"
+                                                                            placeholder="Enter Password"
+                                                                    />
+                                                                </div>
+
+                                                                <div class="mb-3">
+                                                                    <label for="roles" class="form-label"><strong>
+                                                                        Roles:</strong>
+                                                                        <select multiple class="form-control"
+                                                                                th:name="roles"
+                                                                                th:size="${allRoles.size()}"
+                                                                                required>
+                                                                            <option th:each="role:${allRoles}"
+                                                                                    th:value="${role.getName()}">
+                                                                                <th:block th:text="${role.getName()}">
+                                                                                </th:block>
+                                                                            </option>
+                                                                        </select>
+                                                                    </label>
+                                                                </div>
+                                                            </form>
+                                                        </div>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary"
+                                                                data-bs-dismiss="modal">Close
+                                                        </button>
+                                                        <button type="button" class="btn btn-primary">Edit
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="modal fade" id="delete" tabindex="-1"
+                                         aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h1 class="modal-title fs-5">Delete user</h1>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                            aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <h1>HELLO!!!!</h1>
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary"
                                                             data-bs-dismiss="modal">Close
                                                     </button>
-                                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                                    <button type="button" class="btn btn-primary">Delete</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -128,8 +246,7 @@
                     <div class="container-fluid p-2"><h4 class="text-start"> Add new user </h4></div>
                     <div class="row bg-white justify-content-center">
                         <div class="col-3 p-2">
-
-                            <form class="text-center" th:action="@{/admin}" th:object="${user}" th:method="POST">
+                            <form class="text-center" th:action="@{/admin}" th:object="${newUser}" th:method="POST">
                                 <div class="mb-3">
                                     <label for="firstName" class="form-label"><strong> First Name </strong></label>
                                     <input
