--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -26,6 +26,7 @@
 </nav>
 
 <div class="row g-0">
+    <br>
     <div class="col-2">
         <div class="d-grid gap-2">
             <button class="btn btn-primary" type="button">
@@ -41,12 +42,12 @@
         <div class="container-fluid p-2">
             <h1 class="text-start">Admin panel</h1>
             <div class="nav nav-tabs p-1" id="nav-tab" role="tablist">
-                <button class="nav-link active" id="nav-admin-tab" data-bs-toggle="tab"
+                <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab"
                         data-bs-target="#nav-table"
                         type="button"
                         role="tab" aria-controls="nav-table" aria-selected="true">Users table
                 </button>
-                <button class="nav-link" id="nav-new-user-tab" data-bs-toggle="tab"
+                <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab"
                         data-bs-target="#nav-new-user"
                         type="button"
                         role="tab" aria-controls="nav-user" aria-selected="false">New User
@@ -54,9 +55,8 @@
             </div>
 
             <div class="tab-content">
-
                 <div class="tab-pane fade show active" id="nav-table" role="tabpanel"
-                     aria-labelledby="nav-table-tab"
+                     aria-labelledby="nav-home-tab"
                      tabindex="0">
                     <div class="container-fluid bg-light p-2">
                         <h4>All users</h4>
@@ -74,7 +74,7 @@
                                     <th>Delete</th>
                                 </tr>
                                 </thead>
-                                <tbody id="userTable">
+                                <tbody id="adminTable">
 
                                 </tbody>
                             </table>
@@ -87,82 +87,75 @@
                     <div class="container-fluid p-2"><h4 class="text-start"> Add new user </h4></div>
                     <div class="row bg-white justify-content-center">
                         <div class="col-3 p-2">
-                            <form class="text-center" id="addUser" th:action="@{/admin}" th:object="${newUser}" th:method="POST">
+                            <form class="text-center" id="form_newUser">
                                 <div class="mb-3">
-                                    <label for="firstName" class="form-label"><strong> First Name </strong></label>
+                                    <label for="add_firstName" class="form-label fw-bold">First Name</label>
                                     <input
                                             type="text"
-                                            id="firstName"
+                                            id="add_firstName"
                                             name="firstName"
                                             class="form-control"
-                                            th:field="*{firstName}"
                                             placeholder="Enter First Name"
                                     />
                                 </div>
 
                                 <div class="mb-3">
-                                    <label for="lastName" class="form-label"><strong> Last Name </strong></label>
+                                    <label for="add_lastName" class="form-label fw-bold">Last Name</label>
                                     <input
                                             type="text"
-                                            id="lastName"
+                                            id="add_lastName"
                                             name="lastName"
                                             class="form-control"
-                                            th:field="*{lastName}"
                                             placeholder="Enter Last Name"
                                     />
                                 </div>
 
                                 <div class="mb-3">
-                                    <label for="age" class="form-label"><strong> Age </strong></label>
+                                    <label for="add_age" class="form-label fw-bold">Age</label>
                                     <input
                                             type="number"
-                                            id="age"
+                                            id="add_age"
                                             name="age"
                                             class="form-control"
-                                            th:field="*{age}"
                                             placeholder="Enter Age"
                                     />
                                 </div>
 
                                 <div class="mb-3">
-                                    <label for="email" class="form-label"><strong> Email </strong></label>
+                                    <label for="add_email" class="form-label fw-bold">Email</label>
                                     <input
                                             type="email"
-                                            id="email"
+                                            id="add_email"
                                             name="email"
                                             class="form-control"
-                                            th:field="*{email}"
                                             placeholder="Enter Email"
                                     />
                                 </div>
 
                                 <div class="mb-3">
-                                    <label for="password" class="form-label"><strong> Password </strong></label>
+                                    <label for="add_password" class="form-label fw-bold">Password</label>
                                     <input
-                                            type="text"
-                                            id="password"
+                                            type="password"
+                                            id="add_password"
                                             name="password"
                                             class="form-control"
-                                            th:field="*{password}"
                                             placeholder="Enter Password"
                                     />
                                 </div>
 
                                 <div class="mb-3">
-                                    <label for="roles" class="form-label"><strong> Roles:</strong>
-                                        <select multiple class="form-control"
-                                                id="roles" name="roles"
-                                                th:size="${allRoles.size()}"
-                                                required>
-                                            <option th:each="role:${allRoles}"
-                                                    th:value="${role.getName()}">
-                                                <th:block th:text="${role.getName()}">
-                                                </th:block>
-                                            </option>
+                                    <label class="form-label fw-bold">Roles:
+                                        <select multiple
+                                                class="form-select form-select-sm"
+                                                name="roles"
+                                                size="2"
+                                                id="select_roles">
+                                            <option value="ADMIN">ADMIN</option>
+                                            <option value="USER">USER</option>
                                         </select>
                                     </label>
                                 </div>
-                                <button type="submit" class="btn btn-success">
+                                <button type="submit" class="btn btn-success" form="form_newUser">
                                     Add new user
                                 </button>
                             </form>
@@ -173,11 +166,163 @@
         </div>
     </div>
 </div>
+
+<div class="modal" id="modal_edit" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Edit user</h5>
+                <button type="button" class="btn-close"
+                        aria-label="Close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <form class="text-center" id="editForm">
+                    <label class="form-label fw-bold">ID</label>
+
+                    <input id="edit_id"
+                           name="id"
+                           th:type="text"
+                           class="form-control" disabled>
+                    <br/>
+                    <label class="form-label fw-bold" for="edit_firstName">
+                        Username</label>
+                    <input th:type="text"
+                           id="edit_firstName"
+                           name="username"
+                           placeholder="First Name"
+                           class="form-control"/>
+                    <br/>
+                    <label class="form-label fw-bold" for="edit_lastName">
+                        Username</label>
+                    <input th:type="text"
+                           id="edit_lastName"
+                           name="username"
+                           placeholder="Last Name"
+                           class="form-control"/>
+                    <br/>
+                    <label class="form-label fw-bold" for="edit_age">Age</label>
+                    <input th:type="number"
+                           id="edit_age"
+                           name="age"
+                           placeholder="Age"
+                           class="form-control"/>
+                    <br/>
+                    <label class="form-label fw-bold"
+                           for="edit_email">Email</label>
+                    <input th:type="email"
+                           id="edit_email"
+                           name="email"
+                           placeholder="Email"
+                           class="form-control"/>
+                    <br/>
+                    <label class="form-label fw-bold"
+                           for="edit_password">Password</label>
+                    <input th:type="password"
+                           id="edit_password"
+                           name="password"
+                           placeholder="Password"
+                           class="form-control"/>
+                    <br/>
+                    <label class="form-label fw-bold">Roles</label>
+                    <select multiple
+                            class="form-select form-select-sm"
+                            name="roles"
+                            id="edit_roles"
+                            size="2">
+                        <option value="ADMIN">ADMIN</option>
+                        <option value="USER">USER</option>
+                    </select>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary"
+                                data-bs-dismiss="modal"
+                                id="editFrom_closeButton">Close
+                        </button>
+                        <button type="submit"
+                                id="editForm_editButton"
+                                class="btn btn-primary"
+                                onclick="editUser()">Edit
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
+
+
+<div class="modal" id="modal_delete" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Delete user</h5>
+                <button type="button" class="btn-close"
+                        aria-label="Close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <form class="text-center" id="deleteForm">
+                    <label class="form-label fw-bold">ID</label>
+                    <input id="delete_id"
+                           name="id"
+                           th:type="text"
+                           class="form-control" disabled>
+                    <br/>
+                    <label class="form-label fw-bold" for="delete_firstName">
+                        Username</label>
+                    <input th:type="text"
+                           id="delete_firstName"
+                           name="username"
+                           placeholder="Username"
+                           class="form-control" disabled/>
+                    <br/>
+                    <label class="form-label fw-bold" for="delete_lastName">
+                        Username</label>
+                    <input th:type="text"
+                           id="delete_lastName"
+                           name="username"
+                           placeholder="Username"
+                           class="form-control" disabled/>
+                    <br/>
+                    <label class="form-label fw-bold"
+                           for="delete_age">Age</label>
+                    <input th:type="number"
+                           id="delete_age"
+                           name="age"
+                           placeholder="Age"
+                           class="form-control" disabled/>
+                    <br/>
+                    <label class="form-label fw-bold"
+                           for="delete_email">Email</label>
+                    <input th:type="text"
+                           id="delete_email"
+                           name="email"
+                           placeholder="Email"
+                           class="form-control" disabled/>
+                    <br/>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary"
+                                id="deleteForm_closeButton"
+                                data-bs-dismiss="modal">Close
+                        </button>
+                        <button type="submit" class="btn btn-danger"
+                                id="deleteForm_deleteButton"
+                                onclick="deleteUser(); getAdmin();">Delete
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
-<script th:src="@{/js/admin.js}"></script>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+
+<script th:src="@{/js/adminPage.js}"></script>
+<script th:src="@{/js/deleteModal.js}"></script>
+<script th:src="@{/js/editModal.js}"></script>
+<script th:src="@{/js/addNewUser.js}"></script>
 </body>
 </html>
